manifests/cloud/gitea/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitea
  name: gitea
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - image: gitea/gitea
        name: gitea
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: gitea-appdata
          mountPath: /data
      volumes:
        - name: gitea-appdata
          persistentVolumeClaim:
            claimName: gitea-appdata
