manifests/cloud/gitea/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    app: gitea
  namespace: cloud
spec:
  selector:
    app: gitea
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
