manifests/cloud/gitea/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  labels:
    app: gitea
  namespace: cloud
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    flame.pawelmalak/type: application
    flame.pawelmalak/name: Git
    flame.pawelmalak/url: https://git.cafio.co/
    flame.pawelmalak/icon: git
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - git.cafio.co
    secretName: git.cafio.co-tls
  rules:
  - host: git.cafio.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 3000
